#
# Configure file for Cmake project
#
# Author: hucheng (hucheng.hu@huawei.com)
# Date:   2013/07/02

# Description:
# This pme bmc apps source code dir.
#
#
## Customizing Section: adjust the following if necessary.
##=============================================================================


ADD_SUBDIRECTORY(card_manage)
ADD_SUBDIRECTORY(bios)
ADD_SUBDIRECTORY(frudata)
ADD_SUBDIRECTORY(payload)
ADD_SUBDIRECTORY(redfish)
ADD_SUBDIRECTORY(ui_manage)
