#==============================================================================

## Customizing Section: adjust the following if necessary.
##=============================================================================

AUX_SOURCE_DIRECTORY(src/protocol REDFISH)
AUX_SOURCE_DIRECTORY(src/provider REDFISH)
AUX_SOURCE_DIRECTORY(src/provider/account REDFISH)
AUX_SOURCE_DIRECTORY(src/provider/chassis REDFISH)
AUX_SOURCE_DIRECTORY(src/provider/chassis/backupbatteryunit REDFISH)
AUX_SOURCE_DIRECTORY(src/provider/chassis/board REDFISH)
AUX_SOURCE_DIRECTORY(src/provider/chassis/drive REDFISH)
AUX_SOURCE_DIRECTORY(src/provider/chassis/discretesensor REDFISH)
AUX_SOURCE_DIRECTORY(src/provider/chassis/networkadapter REDFISH)
AUX_SOURCE_DIRECTORY(src/provider/chassis/pciedevice REDFISH)
AUX_SOURCE_DIRECTORY(src/provider/chassis/power REDFISH)
AUX_SOURCE_DIRECTORY(src/provider/chassis/hdddrawer REDFISH)
AUX_SOURCE_DIRECTORY(src/provider/chassis/thermal REDFISH)
AUX_SOURCE_DIRECTORY(src/provider/chassis/thresholdsensor REDFISH)
AUX_SOURCE_DIRECTORY(src/provider/dataaccquisition REDFISH)
AUX_SOURCE_DIRECTORY(src/provider/event REDFISH)
AUX_SOURCE_DIRECTORY(src/provider/fabrics REDFISH)
AUX_SOURCE_DIRECTORY(src/provider/manager REDFISH)
AUX_SOURCE_DIRECTORY(src/provider/manager/diagnostic REDFISH)
AUX_SOURCE_DIRECTORY(src/provider/manager/energysaving REDFISH)
AUX_SOURCE_DIRECTORY(src/provider/manager/ethernetinterfaces REDFISH)
AUX_SOURCE_DIRECTORY(src/provider/manager/fdm REDFISH)
AUX_SOURCE_DIRECTORY(src/provider/manager/fpc REDFISH)
AUX_SOURCE_DIRECTORY(src/provider/manager/kvm REDFISH)
AUX_SOURCE_DIRECTORY(src/provider/manager/license REDFISH)
AUX_SOURCE_DIRECTORY(src/provider/manager/lldp REDFISH)
AUX_SOURCE_DIRECTORY(src/provider/manager/log REDFISH)
AUX_SOURCE_DIRECTORY(src/provider/manager/networkprotocol REDFISH)
AUX_SOURCE_DIRECTORY(src/provider/manager/nics REDFISH)
AUX_SOURCE_DIRECTORY(src/provider/manager/ntp REDFISH)
AUX_SOURCE_DIRECTORY(src/provider/manager/security REDFISH)
AUX_SOURCE_DIRECTORY(src/provider/manager/security/certupdate REDFISH)
AUX_SOURCE_DIRECTORY(src/provider/manager/sms REDFISH)
AUX_SOURCE_DIRECTORY(src/provider/manager/smtp REDFISH)
AUX_SOURCE_DIRECTORY(src/provider/manager/snmp REDFISH)
AUX_SOURCE_DIRECTORY(src/provider/manager/sp REDFISH)
AUX_SOURCE_DIRECTORY(src/provider/manager/syslog REDFISH)
AUX_SOURCE_DIRECTORY(src/provider/manager/usbmgmt REDFISH)
AUX_SOURCE_DIRECTORY(src/provider/manager/virtualmedia REDFISH)
AUX_SOURCE_DIRECTORY(src/provider/manager/vnc REDFISH)
AUX_SOURCE_DIRECTORY(src/provider/rack_mgnt REDFISH)
AUX_SOURCE_DIRECTORY(src/provider/registries REDFISH)
AUX_SOURCE_DIRECTORY(src/provider/session REDFISH)
AUX_SOURCE_DIRECTORY(src/provider/system REDFISH)
AUX_SOURCE_DIRECTORY(src/provider/system/bios REDFISH)
AUX_SOURCE_DIRECTORY(src/provider/system/digitalwarranty REDFISH)
AUX_SOURCE_DIRECTORY(src/provider/system/ethernetinterface REDFISH)
AUX_SOURCE_DIRECTORY(src/provider/system/infinibandinterface REDFISH)
AUX_SOURCE_DIRECTORY(src/provider/system/log REDFISH)
AUX_SOURCE_DIRECTORY(src/provider/system/memory REDFISH)
AUX_SOURCE_DIRECTORY(src/provider/system/memoryview REDFISH)
AUX_SOURCE_DIRECTORY(src/provider/system/networkbonding REDFISH)
AUX_SOURCE_DIRECTORY(src/provider/system/networkbridge REDFISH)
AUX_SOURCE_DIRECTORY(src/provider/system/networkinterface REDFISH)
AUX_SOURCE_DIRECTORY(src/provider/system/processor REDFISH)
AUX_SOURCE_DIRECTORY(src/provider/system/storage REDFISH)
AUX_SOURCE_DIRECTORY(src/provider/system/systemoverview REDFISH)
AUX_SOURCE_DIRECTORY(src/provider/task REDFISH)
AUX_SOURCE_DIRECTORY(src/provider/updateservice REDFISH)
AUX_SOURCE_DIRECTORY(src/smm_provider REDFISH)

ADD_EXECUTABLE(redfish ${REDFISH})

INCLUDE_DIRECTORIES(inc/protocol)
INCLUDE_DIRECTORIES(inc/provider)
INCLUDE_DIRECTORIES(${HUAWEI_PME_BMC_SOURCE_DIR}/src/include)
INCLUDE_DIRECTORIES(${HUAWEI_PME_BMC_SOURCE_DIR}/src/include/pme_app/property_method)
INCLUDE_DIRECTORIES(${SDK_INC_PME}/pme/debug)
INCLUDE_DIRECTORIES(${SDK_INC_PME}/pme/property_method)
INCLUDE_DIRECTORIES(${SDK_INC_PME}/pme_app/property_method)
INCLUDE_DIRECTORIES(${HUAWEI_PME_BMC_SOURCE_DIR}/../platforms/kmc/include)
INCLUDE_DIRECTORIES(${HUAWEI_PME_BMC_SOURCE_DIR}/src/include/pme_app/kmc)
if(FROM_SOURCE)
    add_dependencies(redfish libssh2 jsonc curl sqlite)
endif()

INCLUDE_DIRECTORIES(${HUAWEI_PME_BMC_SOURCE_DIR}/src/include/open_source)
INCLUDE_DIRECTORIES(${HUAWEI_PME_BMC_SOURCE_DIR}/src/include/open_source/json)
INCLUDE_DIRECTORIES(${SDK_INC}/glib-2.0)
INCLUDE_DIRECTORIES(${SDK_LIB}/glib-2.0/include)
INCLUDE_DIRECTORIES(${SDK_INC} ${SDK_INC_PME})

# dalib的被动依赖
TARGET_LINK_LIBRARIES(redfish ${HUAWEI_PME_BMC_SOURCE_DIR}/src/lib_open_source/libnetsnmpagent.so)
TARGET_LINK_LIBRARIES(redfish ${HUAWEI_PME_BMC_SOURCE_DIR}/src/lib_open_source/libnetsnmphelpers.so) 
TARGET_LINK_LIBRARIES(redfish ${HUAWEI_PME_BMC_SOURCE_DIR}/src/lib_open_source/libnetsnmpmibs.so) 
TARGET_LINK_LIBRARIES(redfish ${HUAWEI_PME_BMC_SOURCE_DIR}/src/lib_open_source/libnetsnmp.so) 
TARGET_LINK_LIBRARIES(redfish ${HUAWEI_PME_BMC_SOURCE_DIR}/src/lib_open_source/libnetsnmptrapd.so) 
TARGET_LINK_LIBRARIES(redfish ${HUAWEI_PME_BMC_SOURCE_DIR}/src/lib_open_source/libpcre.so)
TARGET_LINK_LIBRARIES(redfish ${HUAWEI_PME_BMC_SOURCE_DIR}/src/lib_open_source/libpcrecpp.so)
TARGET_LINK_LIBRARIES(redfish ${HUAWEI_PME_BMC_SOURCE_DIR}/src/lib_open_source/libpcreposix.so)
TARGET_LINK_LIBRARIES(redfish ${HUAWEI_PME_BMC_SOURCE_DIR}/src/lib_open_source/libsqlite3.so)
TARGET_LINK_LIBRARIES(redfish ${HUAWEI_PME_BMC_SOURCE_DIR}/src/rootfs/usr/lib/libsqlite3_pme.so)
TARGET_LINK_LIBRARIES(redfish ${HUAWEI_PME_BMC_SOURCE_DIR}/src/rootfs/usr/lib/libdalib.so)

TARGET_LINK_LIBRARIES(redfish ${XML2})
TARGET_LINK_LIBRARIES(redfish ${GLIB2})
TARGET_LINK_LIBRARIES(redfish ${JSON})
TARGET_LINK_LIBRARIES(redfish ${CURL})
TARGET_LINK_LIBRARIES(redfish ${HUAWEI_PME_BMC_SOURCE_DIR}/src/rootfs/usr/lib/libsml_base.so)
TARGET_LINK_LIBRARIES(redfish ${COMMON})
TARGET_LINK_LIBRARIES(redfish ${DFLIB})
TARGET_LINK_LIBRARIES(redfish ${FILE_MANAGE})
TARGET_LINK_LIBRARIES(redfish ${PERSISTANCE})
TARGET_LINK_LIBRARIES(redfish ${IPMI_COMMON})
TARGET_LINK_LIBRARIES(redfish ${MAINT_DEBUG})
TARGET_LINK_LIBRARIES(redfish ${HUAWEI_PME_BMC_SOURCE_DIR}/src/rootfs/usr/lib/libuip.so)
TARGET_LINK_LIBRARIES(redfish ${SECURE})
TARGET_LINK_LIBRARIES(redfish ${HUAWEI_PME_BMC_SOURCE_DIR}/src/rootfs/usr/lib/libpam_tally_ext.so)
TARGET_LINK_LIBRARIES(redfish ${HUAWEI_PME_BMC_SOURCE_DIR}/src/rootfs/usr/lib/libarithmetic.so)
TARGET_LINK_LIBRARIES(redfish ${XML_PARSER})
TARGET_LINK_LIBRARIES(redfish ${HASLIB})
TARGET_LINK_LIBRARIES(redfish ${DFLBASE})
TARGET_LINK_LIBRARIES(redfish ${DFRPC})
TARGET_LINK_LIBRARIES(redfish ${THRIFT})
TARGET_LINK_LIBRARIES(redfish ${MUPARSER})
TARGET_LINK_LIBRARIES(redfish ${DRIVERS})
TARGET_LINK_LIBRARIES(redfish ${PFLASH})
TARGET_LINK_LIBRARIES(redfish ${MAINT_DEBUG_MSG})
TARGET_LINK_LIBRARIES(redfish ${MAINT_DEBUG_COM})
TARGET_LINK_LIBRARIES(redfish ${SSH2})
TARGET_LINK_LIBRARIES(redfish ${HUAWEI_PME_BMC_SOURCE_DIR}/src/rootfs/usr/lib/libkmc.so)
TARGET_LINK_LIBRARIES(redfish ${HUAWEI_PME_BMC_SOURCE_DIR}/src/rootfs/usr/lib/libsmm_public.so)

INSTALL(TARGETS redfish RUNTIME DESTINATION opt/bmc/apps/legacy/redfish)